--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="eclipse"></div>
     <div class="eclipse-text">
         <h1>THE ECLIPSE</h1>
+        <p>By Luteya Coulston</p>
     </div>
 </body>
 </html>
